--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -10,9 +10,16 @@
     "format": "biome format --write",
     "preview": "rsbuild preview"
   },
+  "zephyr:dependencies": {
+    "flight_board": "zephyr:flight_board@*",
+    "passenger_services": "zephyr:passenger_services@*"
+  },
   "dependencies": {
+    "@module-federation/enhanced": "^0.21.1",
+    "@module-federation/rsbuild-plugin": "^0.21.1",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "zephyr-rsbuild-plugin": "0.1.1-next.1"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.3",
