--- a/apps/flight-board/package.json
+++ b/apps/flight-board/package.json
@@ -11,8 +11,11 @@
     "preview": "rsbuild preview"
   },
   "dependencies": {
+    "@module-federation/enhanced": "^0.21.1",
+    "@module-federation/rsbuild-plugin": "^0.21.1",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "zephyr-rsbuild-plugin": "0.1.1-next.1"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.3",
