--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -1,32 +1,31 @@
 {
   "name": "dashboard",
-  "version": "1.0.0",
   "private": true,
-  "type": "module",
-  "scripts": {
-    "build": "rsbuild build",
-    "check": "biome check --write",
-    "dev": "rsbuild dev --open",
-    "format": "biome format --write",
-    "preview": "rsbuild preview"
-  },
+  "version": "1.0.0",
   "zephyr:dependencies": {
-    "flight_board": "zephyr:flight_board@*",
-    "passenger_services": "zephyr:passenger_services@*"
+    "flight_board": "flight_board@*",
+    "passenger_services": "passenger_services@*"
+  },
+  "scripts": {
+    "build": "rspack build",
+    "check": "biome check --write",
+    "dev": "rspack dev",
+    "format": "biome format --write",
+    "preview": "rspack preview"
   },
   "dependencies": {
-    "@module-federation/enhanced": "^0.21.1",
-    "@module-federation/rsbuild-plugin": "^0.21.1",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "zephyr-rsbuild-plugin": "0.1.1-next.1"
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "zephyr-rspack-plugin": "0.1.1-next.1"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.3",
-    "@rsbuild/core": "^1.5.14",
-    "@rsbuild/plugin-react": "^1.4.1",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.1",
-    "typescript": "^5.9.3"
+    "@rspack/cli": "^1.5.8",
+    "@rspack/core": "^1.5.8",
+    "@rspack/plugin-react-refresh": "^1.5.1",
+    "@types/react": "^19.1.13",
+    "@types/react-dom": "^19.1.9",
+    "react-refresh": "^0.17.0",
+    "typescript": "^5.9.2"
   }
 }
