--- a/apps/dashboard/tsconfig.json
+++ b/apps/dashboard/tsconfig.json
@@ -9,20 +9,14 @@
 
     /* modules */
     "module": "ESNext",
-    "moduleDetection": "force",
-    "moduleResolution": "bundler",
-    "verbatimModuleSyntax": true,
     "resolveJsonModule": true,
+    "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
-    "noUncheckedSideEffectImports": true,
 
     /* type checking */
     "strict": true,
     "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "paths": {
-      "*": ["./@mf-types/*"]
-    }
+    "noUnusedParameters": true
   },
-  "include": ["src", "module-federation.config.ts"]
+  "include": ["src"]
 }
